--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,6 @@ include: README.md
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
+markdown: kramdown
+kramdown:
+  math_engine: katex
